flutter.log
  File "<string>", line 1
    import http.server, socketserver; class CORSRequestHandler(http.server.SimpleHTTPRequestHandler): 
                                      ^^^^^
SyntaxError: invalid syntax
